# check-json-size

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
aws-policy-size/: .gitignore
hooks/: aws_policy_size.py
src/: aws_policy_size.py
tests/: test_aws_policy_size.py  test_json_file.json
