[metadata]
name = check-json-size
version = 0.1.0
description = A pre-commit hook for checking a json object size against a maximum value.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sainsburys-tech/cloud-aws-check-json-size.git
author = Jonathan Flynn
author_email = Jonathan.Flynn@sainsburys.co.uk

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6.2

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    check-json-size = hooks.aws_policy_size:main

[bdist_wheel]
universal = True

[isort]
profile = black]
